--- a/index.html
+++ b/index.html
@@ -14,36 +14,140 @@
         .append("g")
           .attr("transform", "translate(500,500) scale(1,-1)");
 
-      function drawCell(x,y,r) {
-        var cell = svg.append("circle")
-          .attr("cx", x)
-          .attr("cy",y)
-          .attr("r", r);
-          return cell;
-      }
+      var board = {
+          cells: {},
+          edgeLength: 13,
+          cellSize: 20,
 
-      function drawBoard(edgeLength, cellSize) {
-          var x = 0;
-          var y = 0;
-          var rowLength = edgeLength;
-          for(n = edgeLength; n > 0; n-=2) {
-              for(m = rowLength; m > 0; m-=1) {
-                  drawCell(x,y,cellSize);
-                  x+=2*cellSize;
+          draw: function() {
+              var edgeLength = board.edgeLength;
+              var cellSize = board.cellSize;
+              var x = 0;
+              var y = 0;
+              var rowLength = edgeLength;
+              var boardX = 0;
+              var boardY = 0;
+              for(n = edgeLength; n > 0; n-=2) {
+                  for(m = rowLength; m > 0; m-=1) {
+                      cell=board.drawCell(x,y,cellSize);
+                      if (board.cells[boardX] == undefined) {
+                        board.cells[boardX] = {};
+                      }
+                      board.cells[boardX][boardY] = cell;
+                      cell.attr("data-board-x", boardX).attr("data-board-y", boardY);
+                      x+=2*cellSize;
+                      boardX += 1;
+                  }
+                  x=(2+edgeLength-rowLength)*cellSize;
+                  y+=2*cellSize;
+                  boardY+=1;
+                  boardX = boardY;
+                  rowLength-=2;
               }
-              x=(2+edgeLength-rowLength)*cellSize;
-              y+=2*cellSize;
-              rowLength-=2;
+          },
+          drawCell: function(x,y,r) {
+            var cell = svg.append("circle")
+              .attr("cx", x)
+              .attr("cy",y)
+              .attr("r", r);
+              return cell;
+          }
+      };
+
+      board.draw();
+
+      var snake = {
+          headPosition: {
+            boardX: 6,
+            boardY: 6
+          },
+          length: 1,
+          direction: "SW",
+
+          draw: function() {
+              svg.selectAll("circle").attr("fill","black");
+              // console.log(snake.headPosition.boardX,snake.headPosition.boardY)
+              head = board.cells[snake.headPosition.boardX][snake.headPosition.boardY];
+              head.attr("fill","red");
+          },
+
+          move: function() {
+              switch(snake.direction) {
+                case "E":
+                    snake.moveRight();
+                    break;
+                case "W":
+                    snake.moveLeft();
+                    break;
+                case "NE":
+                    if (snake.headPosition.boardX % 2 == snake.headPosition.boardY % 2) {
+                        snake.moveRight();
+                    } else {
+                        snake.moveUp();
+                    }
+                    break;
+                case "NW":
+                    if (snake.headPosition.boardX % 2 == snake.headPosition.boardY % 2) {
+                        snake.moveLeft();
+                    } else {
+                        snake.moveUp();
+                    }
+                    break;
+                case "SE":
+                    if (snake.headPosition.boardX % 2 == snake.headPosition.boardY % 2) {
+                        snake.moveDown();
+                    } else {
+                        snake.moveRight();
+                    }
+                    break;
+                case "SW":
+                    if (snake.headPosition.boardX % 2 == snake.headPosition.boardY % 2) {
+                        snake.moveDown();
+                    } else {
+                        snake.moveLeft();
+                    }
+                    break;
+              }
+          },
+          moveRight: function() {
+            if (board.cells[snake.headPosition.boardX+1][snake.headPosition.boardY]) {
+              snake.headPosition.boardX += 1;
+            }
+            // else {
+            //   snake.headPosition.boardX = snake.headPosition.boardY;
+            // }
+          },
+          moveLeft: function() {
+            if (board.cells[snake.headPosition.boardX-1][snake.headPosition.boardY]) {
+              snake.headPosition.boardX -= 1;
+            }
+            // else {
+            //   snake.headPosition.boardX = board.edgeLength-1-snake.headPosition.boardY;
+            // }
+          },
+          moveUp: function() {
+            if (board.cells[snake.headPosition.boardX][snake.headPosition.boardY+1]) {
+              snake.headPosition.boardY += 1;
+            }
+            //TODO: wrap
+          },
+          moveDown: function() {
+            if (board.cells[snake.headPosition.boardX][snake.headPosition.boardY-1]) {
+              snake.headPosition.boardY -= 1;
+            }
+            //TODO: wrap
+          },
+
+          run: function() {
+              var t = d3.interval(function(elapsed) {
+                  snake.draw();
+                  snake.move();
+              }, 500);
           }
       }
 
-      drawBoard(13, 20);
+      snake.run()
 
-      var snake = {
-          headPosition: undefined,
-          length: undefined,
-          direction: undefined
-      }
     </script>
   </body>
 </html>
