--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Snakenlichten</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://d3js.org/d3.v4.min.js"></script>
   </head>
   <body>
+    <div id="controls">
+      <div class="btn-group btn-group-justified">
+        <a id="direction-NW" class="btn btn-default" onclick="snake.direction='NW';">NW</a>
+        <a id="direction-NE" class="btn btn-default" onclick="snake.direction='NE';">NE</a>
+      </div>
+      <div class="btn-group btn-group-justified">
+        <a id="direction-W" class="btn btn-default" onclick="snake.direction='W';">W</a>
+        <a id="direction-E" class="btn btn-default" onclick="snake.direction='E';">E</a>
+      </div>
+      <div class="btn-group btn-group-justified">
+        <a id="direction-SW" class="btn btn-default" onclick="snake.direction='SW';">SW</a>
+        <a id="direction-SE" class="btn btn-default" onclick="snake.direction='SE';">SE</a>
+      </div>
+    </div>
     <script>
       var width = 1000, height = 1000;
       var svg = d3.select("body").append("svg")
         .attr("width", width)
         .attr("height", height)
         .append("g")
-          .attr("transform", "translate(500,500) scale(1,-1)");
+          .attr("transform", "translate(300,300) scale(1,-1)");
 
       var board = {
           cells: {},
@@ -58,11 +73,11 @@
 
       var snake = {
           headPosition: {
-            boardX: 6,
-            boardY: 6
+            boardX: 0,
+            boardY: 0
           },
           length: 1,
-          direction: "SW",
+          direction: "E",
 
           draw: function() {
               svg.selectAll("circle").attr("fill","black");
@@ -110,7 +125,7 @@
               }
           },
           moveRight: function() {
-            if (board.cells[snake.headPosition.boardX+1][snake.headPosition.boardY]) {
+            if (board.cells[snake.headPosition.boardX+1] && board.cells[snake.headPosition.boardX+1][snake.headPosition.boardY]) {
               snake.headPosition.boardX += 1;
             }
             // else {
@@ -118,7 +133,7 @@
             // }
           },
           moveLeft: function() {
-            if (board.cells[snake.headPosition.boardX-1][snake.headPosition.boardY]) {
+            if (board.cells[snake.headPosition.boardX-1] && board.cells[snake.headPosition.boardX-1][snake.headPosition.boardY]) {
               snake.headPosition.boardX -= 1;
             }
             // else {
@@ -126,13 +141,13 @@
             // }
           },
           moveUp: function() {
-            if (board.cells[snake.headPosition.boardX][snake.headPosition.boardY+1]) {
+            if (board.cells[snake.headPosition.boardX] && board.cells[snake.headPosition.boardX][snake.headPosition.boardY+1]) {
               snake.headPosition.boardY += 1;
             }
             //TODO: wrap
           },
           moveDown: function() {
-            if (board.cells[snake.headPosition.boardX][snake.headPosition.boardY-1]) {
+            if (board.cells[snake.headPosition.boardX] && board.cells[snake.headPosition.boardX][snake.headPosition.boardY-1]) {
               snake.headPosition.boardY -= 1;
             }
             //TODO: wrap
@@ -140,6 +155,8 @@
 
           run: function() {
               var t = d3.interval(function(elapsed) {
+                  d3.selectAll("#controls .btn").classed("active", false);
+                  d3.select("#direction-"+snake.direction).classed("active", true);
                   snake.draw();
                   snake.move();
               }, 500);
